--- a/components/idp-mgt/org.wso2.carbon.idp.mgt.ui/src/main/resources/org/wso2/carbon/idp/mgt/ui/i18n/Resources.properties
+++ b/components/idp-mgt/org.wso2.carbon.idp.mgt.ui/src/main/resources/org/wso2/carbon/idp/mgt/ui/i18n/Resources.properties
@@ -12,6 +12,8 @@ identity.provider=Identity Provider
 add.identity.provider=Add New Identity Provider
 resident.idp.alias=Alias
 resident.idp.alias.help=If the resident identity provider is known by an alias at the federated identity provider specify it
+idp.issuer.name=Identity Provider's Issuer Name
+idp.issuer.name.help=If the issuer name is different from the Identity Provider Name specify it
 description=Description:
 description.help=A meaningful description about the identity provider
 claim.config.head=Claim Configuration
